node-sass enabled

--- a/assets/style/scss/main.scss
+++ b/assets/style/scss/main.scss
@@ -1,9 +1,3 @@
-@import "base/reset",
-        "base/typography",
-        "abstracts/colors",
-        "abstracts/mixins",
-        "components/buttons", 
-        "layout/grid",
-        "layout/footer",
-        "layout/navbar",
-        "pages/home/index";
+body{
+    background-color: red;
+}
