--- a/assets/style/scss/main.scss
+++ b/assets/style/scss/main.scss
@@ -1,3 +1,4 @@
-body{
-    background-color: red;
-}
+@import "./base/reset", "./base/typography", "./abstracts/color",
+  "./abstracts/mixins", "./components/buttons", "./layout/grid",
+  "./layout/navbar", "./layout/footer", "./pages/home/index",
+  "./pages/shop/shop";
