--- a/assets/style/scss/main.scss
+++ b/assets/style/scss/main.scss
@@ -1,6 +1,6 @@
 @import "base/reset",
         "base/typography",
-        "abstracts/colors",
+        "abstracts/color",
         "abstracts/mixins",
         "components/buttons", 
         "layout/grid",
