--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -1,3 +1,10 @@
+h1, h2, h3, h4, h5, h6, p, span, a, button {
+  font-family: "Epilogue"; }
+
+.container {
+  width: 1032px;
+  margin: 0 auto; }
+
 * {
   margin: 0;
   padding: 0; }
