--- a/assets/style/scss/layout/_grid.scss
+++ b/assets/style/scss/layout/_grid.scss
@@ -2,3 +2,19 @@
   width: 1032px;
   margin: 0 auto;
 }
+.row{
+  display: flex;
+  flex-wrap: wrap;
+}
+.col-3{
+  width: 24.99999%;
+}
+.col-4{
+  width: 33.33333%;
+}
+.col-6{
+  width: 49.99999%;
+}
+.col-12{
+  width: 100%;
+}
