icon&button mixin

--- a/assets/style/scss/main.scss
+++ b/assets/style/scss/main.scss
@@ -1,4 +1,5 @@
 @import "./base/reset", "./base/typography", "./abstracts/color",
-  "./abstracts/mixins", "./components/buttons", "./layout/grid",
+  "./abstracts/mixins", "./components/buttons", "./components/icons","./layout/grid",
   "./layout/navbar", "./layout/footer", "./pages/home/index",
   "./pages/shop/shop";
+
