--- a/views/home.html
+++ b/views/home.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/style/css/main.css">
+    <script
+      src="https://kit.fontawesome.com/0756c55a68.js"
+      crossorigin="anonymous"
+    ></script>
     <title>The North Face</title>
 </head>
 <body>
-    
+    <button class="btn--primary">Button</button>
+    <i class="fa-solid fa-check icon--primary"></i>
+    <i class="fa-solid fa-check icon--primary"></i>
+    <i class="fa-solid fa-check icon--primary"></i>
+
 </body>
 </html>
