--- a/views/home.html
+++ b/views/home.html
@@ -79,9 +79,23 @@
           </div>
         </div>
       </header>
-    <footer>
+    <footer class="footer">
         <div class="container">
-            
+          <div class="row">
+            <div class="col-3 footer__item">
+                <h2 class="footer__item--agency">Agency</h2>
+            </div>
+            <div class="col-3 footer__item--link">
+                <h5>Menu</h5>
+
+            </div>
+            <div class="col-3 footer__item footer__item--link">
+                <h5>Service</h5>
+            </div>
+            <div class="col-3 footer__item footer__item--icon">
+                <p>Lorem, ipsum.</p>
+            </div>
+          </div>
         </div>
     </footer>
 </body>
