--- a/assets/style/scss/layout/_navbar.scss
+++ b/assets/style/scss/layout/_navbar.scss
@@ -1,6 +1,6 @@
 .app__header {
   width: 100%;
-  background-color: #32334C;
+  background-color: #32334c;
   position: fixed;
   padding: 16px;
   &__logo {
@@ -24,13 +24,94 @@
     align-items: center;
     justify-content: center;
     button {
-      padding: 5px 10px;
+        background: transparent;
+        border-radius: 6px;
+        padding: 18px 22px;
+        color: white;
+        border: 1px solid lightgrey;
+        font-weight: bold;
     }
   }
 }
-.app__main{
+.app__main {
+  background-color: #32334c;
+  &__hero {
+    padding-top: 178px;
 
-    .app__main__hero{
-        padding-top: 178px;
+    &__content {
+      &__subtitle {
+        margin-bottom: 24px;
+        &__item {
+          color: #ef6d58;
+        }
+      }
+      &__title {
+        margin-bottom: 24px;
+        &__item {
+          font-size: 72px;
+          color: white;
+        }
+      }
+      &__desc {
+        &__item {
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 32px;
+          color: rgba(255, 255, 255, 0.64);
+        }
+      }
+      &__buttons {
+        padding: 10px 0;
+
+        margin-bottom: 108px;
+        &--orange {
+          margin-right: 48px;
+          background: #ef6d58;
+          border-radius: 6px;
+          padding: 18px 22px;
+          color: white;
+          border: none;
+          font-weight: bold;
+        }
+        &--transparent {
+          background-color: transparent;
+          border: none;
+          color: white;
+        }
+      }
+      &__testimonial {
+        display: flex;
+        &__image {
+          margin-right: 20px;
+          padding: 10px;
+        }
+        &__body {
+          &__desc {
+            &__item {
+              font-family: "Epilogue";
+              font-style: normal;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 32px;
+              color: rgba(255, 255, 255, 0.64);
+            }
+          }
+          &__author {
+            &__item {
+              /* Text */
+
+              font-family: "Epilogue";
+              font-style: normal;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 32px;
+              color: #ffffff;
+            }
+          }
+        }
+      }
     }
+  }
 }
