--- a/assets/style/scss/layout/_navbar.scss
+++ b/assets/style/scss/layout/_navbar.scss
@@ -34,10 +34,9 @@
   }
 }
 .app__main {
-  background-color: #32334c;
-  &__hero {
+    &__hero {
+    background-color: #32334c;
     padding-top: 178px;
-
     &__content {
       &__subtitle {
         margin-bottom: 24px;
@@ -82,6 +81,7 @@
         }
       }
       &__testimonial {
+        padding-bottom: 64px;
         display: flex;
         &__image {
           margin-right: 20px;
@@ -113,5 +113,62 @@
         }
       }
     }
+  }
+  &__features{
+    border: solid;
+    background-color: #fdf0e9;
+    &__subtitle {
+        margin-bottom: 24px;
+        &__item {
+          color: #ef6d58;
+        }
+      }
+      &__title {
+        margin-bottom: 24px;
+        &__item {
+            font-weight: 800;
+          font-size: 48px;
+          color: #391400;
+        }
+      }
+      &__desc {
+        &__item {
+          font-size: 16px;
+          font-weight: 400;
+          font-size: 16px;
+          font-weight:700 ;
+          line-height: 32px;
+          color: #391400A3;
+        }
+      }
+      &__items{
+        margin-top: 90px;
+        &__item{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin: 32px 0;
+            &__count{
+                font-size: 72px;
+                color: #391400;
+                font-weight: 800;
+            }
+            &__desc{
+                font-weight: 700;
+                color: #391400;
+                font-size: 36px !important;
+            }
+        }
+      }
+      &__button{
+
+        button{
+            color: #391400;
+            border: none;
+            background-color: transparent;
+            margin-top: 28px;
+
+        }
+      }
   }
 }
