--- a/views/home.html
+++ b/views/home.html
@@ -114,6 +114,68 @@
           </div>
         </div>
       </section>
+      <section class="app__main__features">
+        <div class="container">
+            <div class="row">
+                <div class="col-6" style="padding: 40px;">
+                    <div class="app__main__features__subtitle">
+                        <div class="app__main__features__subtitle__item">
+                            How We Work
+                        </div>
+                    </div>
+                    <div class="app__main__features__title">
+                        <h4 class="app__main__features__title__item">
+                            Making Your Projects Look Awesome
+                        </h4>
+                    </div>
+                    <div class="app__main__features__desc">
+                        <p class="app__main__features__desc__item">
+                            Technical skills, design, business understanding, ability to put themselves in the merchant's shoes.
+                        </p>
+                    </div>
+                    <div class="app__main__features__button">
+                        <button class="app__main__features__button__item">
+                            Read More
+                        </button>
+                    </div>
+                </div>
+                <div class="col-6">
+                   <div class="app__main__features__items">
+                    <div class="app__main__features__items__item">
+                        <div class="app__main__features__items__item__count">
+                            <span>1</span>
+                        </div>
+                        <div class="app__main__features__items__item__desc">
+                            <p class="app__main__features__items__item__desc__item">
+                                Full service range including
+                            </p>
+                        </div>
+                    </div>
+                    <div class="app__main__features__items__item">
+                        <div class="app__main__features__items__item__count">
+                            <span>2</span>
+                        </div>
+                        <div class="app__main__features__items__item__desc">
+                            <p class="app__main__features__items__item__desc__item">
+                                Technical skills, design, business
+                            </p>
+                        </div>
+                    </div>
+                    <div class="app__main__features__items__item">
+                        <div class="app__main__features__items__item__count">
+                            <span>3</span>
+                        </div>
+                        <div class="app__main__features__items__item__desc">
+                            <p class="app__main__features__items__item__desc__item">
+                                Themselves in the merchant's
+                            </p>
+                        </div>
+                    </div>
+                   </div>
+                </div>
+            </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
