footer done responsive

--- a/assets/style/scss/abstracts/_color.scss
+++ b/assets/style/scss/abstracts/_color.scss
@@ -1,1 +1,6 @@
-$orange: #EF6D58;
+$orange: #ed8575;
+$icon-bgc: #EF6D58;
+$icon-bgc-hover: #c05342;
+$text-dark: #391400;
+$section-bgc: #FDF0E9;
+$hr-bgc: #F3D1BF;
