--- a/views/home.html
+++ b/views/home.html
@@ -85,19 +85,43 @@
       </header>
     <footer class="footer">
         <div class="container">
-          <div class="row">
-            <div class="col-3 footer__item">
+          <div class="row footer__row--main">
+            <div class="col-3 col-md-12 footer__item">
                 <h2 class="footer__item--agency">Agency</h2>
             </div>
-            <div class="col-3 footer__item--link">
+            <div class="col-3 col-md-12 footer__item--link">
                 <h5>Menu</h5>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="col-3 col-md-12 footer__item--link">
+                <h5>Service</h5>
+                <ul>
+                    <li><a href="#">Design</a></li>
+                    <li><a href="#">Development</a></li>
+                    <li><a href="#">Marketing</a></li>
+                    <li><a href="#">See More</a></li>
+                </ul>
+            </div>
+            <div class="col-3 col-md-12 footer__item--icon">
+                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>  
+            </div>
+          </div>
+          <hr>
+          <div class="row footer__row--copyright">
+            <div class="col-6 col-md-12 copyright">
+                <span>Copyright © 2022 Laaqiq. All Rights Reserved.</span>
 
             </div>
-            <div class="col-3 footer__item footer__item--link">
-                <h5>Service</h5>
-            </div>
-            <div class="col-3 footer__item footer__item--icon">
-                <p>Lorem, ipsum.</p>
+            <div class="col-6 col-md-12 term-of-use-privacy-col">
+                <a href="#"><span class="terms-of-use">Terms of Use</span></a>
+                <a href="#"><span class="privacy-policy">Privacy Policy</span></a>  
             </div>
           </div>
         </div>
