--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -1,4 +1,3 @@
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -43,6 +42,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+h1, h2, h3, h4, h5, h6, p, span, a, button {
+  font-family: "Epilogue"; }
+
 .btn--primary {
   font-weight: 900;
   font-size: 14px;
@@ -50,7 +52,18 @@ table {
   text-transform: uppercase;
   background-color: #EF6D58;
   color: white;
-  border: 1px solid white;
+  border: none;
+  border-radius: 6px;
+  padding: 1rem 1.5rem; }
+
+.btn--secondary {
+  font-weight: 900;
+  font-size: 14px;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: white;
+  color: #391400;
+  border: none;
   border-radius: 6px;
   padding: 1rem 1.5rem; }
 
@@ -60,12 +73,9 @@ table {
   color: white;
   padding: 30px;
   border-radius: 50%; }
-=======
-h1, h2, h3, h4, h5, h6, p, span, a, button {
-  font-family: "Epilogue"; }
 
 .container {
-  width: 1032px;
+  width: 81.25%;
   margin: 0 auto; }
 
 .row {
@@ -102,3 +112,79 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
     justify-content: center; }
     .app__header__button button {
       padding: 5px 10px; }
+
+* {
+  margin: 0;
+  padding: 0; }
+
+h1 {
+  color: red; }
+
+#experience-design-agency {
+  background-color: #FDF0E9; }
+  #experience-design-agency .logos {
+    display: flex;
+    justify-content: space-between;
+    padding: 4rem 0; }
+    #experience-design-agency .logos img {
+      object-fit: contain;
+      width: 10%; }
+  #experience-design-agency hr {
+    background-color: #F3D1BF;
+    border: none;
+    height: 1px;
+    width: 100%; }
+  #experience-design-agency #about {
+    padding: 5rem 0; }
+    #experience-design-agency #about .upper {
+      display: flex;
+      margin-bottom: 130px; }
+      #experience-design-agency #about .upper img {
+        width: 550px; }
+      #experience-design-agency #about .upper .text {
+        padding-left: 7rem;
+        padding-top: 4rem; }
+        #experience-design-agency #about .upper .text span {
+          color: #EF6D58;
+          font-size: 16px;
+          line-height: 32px;
+          font-weight: 400;
+          margin-bottom: 15px;
+          display: inline-block; }
+        #experience-design-agency #about .upper .text h2 {
+          color: #391400;
+          font-size: 45px;
+          font-weight: 800;
+          letter-spacing: -1px;
+          text-align: left;
+          margin-bottom: 18px; }
+        #experience-design-agency #about .upper .text h6 {
+          color: #391400;
+          font-weight: 400;
+          font-size: 20px;
+          line-height: 32px;
+          margin-bottom: 18px; }
+        #experience-design-agency #about .upper .text p {
+          color: #391400;
+          font-weight: 400;
+          font-size: 14.5px;
+          line-height: 32px;
+          margin-bottom: 30px; }
+    #experience-design-agency #about .lower .box {
+      border: 1px solid #F3D1BF;
+      padding: 2.5rem; }
+      #experience-design-agency #about .lower .box h5 {
+        font-weight: 800;
+        font-size: 30px;
+        line-height: 48px;
+        color: #391400;
+        margin-bottom: 10px; }
+      #experience-design-agency #about .lower .box p {
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 32px;
+        color: #391400; }
+    #experience-design-agency #about .col-4:first-child .box {
+      border-radius: 6px 0px 0px 6px; }
+    #experience-design-agency #about .col-4:last-child .box {
+      border-radius: 0px 6px 6px 0px; }
