--- a/views/home.html
+++ b/views/home.html
@@ -5,18 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script
-      src="https://kit.fontawesome.com/0756c55a68.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/0756c55a68.js" crossorigin="anonymous"></script>
     <!-- Google Fonts Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,500;0,600;1,500;1,600&family=Permanent+Marker&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-        <!-- Main Css Link -->
-        <link rel="stylesheet" href="../assets/style/css/main.css">
+    <!-- Main Css Link -->
+    <link rel="stylesheet" href="../assets/style/css/main.css">
     <title>Figma Template</title>
 </head>
 
@@ -112,67 +109,67 @@
             </div>
         </section>
         <section class="app__main__features">
-           <div class="container">
-            <div class="row">
-                <div class="col-6" style="padding: 40px;">
-                    <div class="app__main__features__subtitle">
-                        <div class="app__main__features__subtitle__item">
-                            How We Work
-                        </div>
-                    </div>
-                    <div class="app__main__features__title">
-                        <h4 class="app__main__features__title__item">
-                            Making Your Projects Look Awesome
-                        </h4>
-                    </div>
-                    <div class="app__main__features__desc">
-                        <p class="app__main__features__desc__item">
-                            Technical skills, design, business understanding, ability to put themselves in the
-                            merchant's shoes.
-                        </p>
-                    </div>
-                    <div class="app__main__features__button">
-                        <button class="app__main__features__button__item">
-                            Read More
-                        </button>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <div class="app__main__features__items">
-                        <div class="app__main__features__items__item">
-                            <div class="app__main__features__items__item__count">
-                                <span>1</span>
-                            </div>
-                            <div class="app__main__features__items__item__desc">
-                                <p class="app__main__features__items__item__desc__item">
-                                    Full service range including
-                                </p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-6" style="padding: 40px;">
+                        <div class="app__main__features__subtitle">
+                            <div class="app__main__features__subtitle__item">
+                                How We Work
                             </div>
                         </div>
-                        <div class="app__main__features__items__item">
-                            <div class="app__main__features__items__item__count">
-                                <span>2</span>
-                            </div>
-                            <div class="app__main__features__items__item__desc">
-                                <p class="app__main__features__items__item__desc__item">
-                                    Technical skills, design, business
-                                </p>
-                            </div>
+                        <div class="app__main__features__title">
+                            <h4 class="app__main__features__title__item">
+                                Making Your Projects Look Awesome
+                            </h4>
                         </div>
-                        <div class="app__main__features__items__item">
-                            <div class="app__main__features__items__item__count">
-                                <span>3</span>
+                        <div class="app__main__features__desc">
+                            <p class="app__main__features__desc__item">
+                                Technical skills, design, business understanding, ability to put themselves in the
+                                merchant's shoes.
+                            </p>
+                        </div>
+                        <div class="app__main__features__button">
+                            <button class="app__main__features__button__item">
+                                Read More
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="app__main__features__items">
+                            <div class="app__main__features__items__item">
+                                <div class="app__main__features__items__item__count">
+                                    <span>1</span>
+                                </div>
+                                <div class="app__main__features__items__item__desc">
+                                    <p class="app__main__features__items__item__desc__item">
+                                        Full service range including
+                                    </p>
+                                </div>
                             </div>
-                            <div class="app__main__features__items__item__desc">
-                                <p class="app__main__features__items__item__desc__item">
-                                    Themselves in the merchant's
-                                </p>
+                            <div class="app__main__features__items__item">
+                                <div class="app__main__features__items__item__count">
+                                    <span>2</span>
+                                </div>
+                                <div class="app__main__features__items__item__desc">
+                                    <p class="app__main__features__items__item__desc__item">
+                                        Technical skills, design, business
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="app__main__features__items__item">
+                                <div class="app__main__features__items__item__count">
+                                    <span>3</span>
+                                </div>
+                                <div class="app__main__features__items__item__desc">
+                                    <p class="app__main__features__items__item__desc__item">
+                                        Themselves in the merchant's
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-           </div>
         </section>
     </main>
     <footer class="footer">
