--- a/views/home.html
+++ b/views/home.html
@@ -171,6 +171,7 @@
                         </div>
                     </div>
                 </div>
+                <hr class="hr">
             </div>
            </div>
         </section>
