--- a/assets/style/scss/pages/home/sections/_features.scss
+++ b/assets/style/scss/pages/home/sections/_features.scss
@@ -42,7 +42,7 @@
       &__desc {
         font-weight: 700;
         color: #391400;
-        font-size: 36px !important;
+        font-size: 24px;
       }
     }
   }
