--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -107,7 +107,6 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
 .app__header {
   width: 100%;
   background-color: #32334c;
-  position: fixed;
   padding: 16px; }
   .app__header__links {
     height: 100%;
@@ -122,7 +121,7 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: center; }
+    justify-content: flex-end; }
     .app__header__button button {
       background: transparent;
       border-radius: 6px;
@@ -381,7 +380,7 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
       .app__main__features__items__item__desc {
         font-weight: 700;
         color: #391400;
-        font-size: 36px !important; }
+        font-size: 24px; }
   .app__main__features__button button {
     color: #391400;
     border: none;
