--- a/assets/style/scss/layout/_navbar.scss
+++ b/assets/style/scss/layout/_navbar.scss
@@ -2,7 +2,6 @@
 .app__header {
   width: 100%;
   background-color: #32334c;
-  position: fixed;
   padding: 16px;
   &__links {
     height: 100%;
@@ -21,7 +20,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     button {
         background: transparent;
         border-radius: 6px;
