--- a/views/home.html
+++ b/views/home.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <header class="app__header">
+    <header class="app__header app__header__desktop">
       <div class="container">
         <div class="row">
           <div class="col-3">
@@ -55,6 +55,20 @@
           </div>
         </div>
       </div>
+    </header>
+    <header class="app__header app__header__mobile">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <img src="../assets/images/logo.png" alt="">
+                </div>
+                <div class="col-6">
+                    <div class="burger">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <main class="app__main">
       <section class="app__main__hero">
