--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -106,6 +106,9 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
 
 .app__header {
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   background-color: #32334c;
   padding: 16px; }
   .app__header__links {
@@ -129,6 +132,29 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
       color: white;
       border: 1px solid lightgrey;
       font-weight: bold; }
+
+.app__header__mobile {
+  display: none; }
+
+@media only screen and (max-width: 992px) {
+  .app__header__desktop {
+    display: none; }
+  .app__header__mobile {
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .app__header__mobile .burger {
+      display: flex;
+      height: 100%;
+      align-items: center;
+      justify-content: flex-end; }
+      .app__header__mobile .burger i {
+        border: 1px solid lightgrey;
+        padding: 10px;
+        color: white;
+        border: 1px solid rgba(255, 255, 255, 0.295743);
+        border-radius: 6px;
+        font-size: 24px; } }
 
 .footer {
   padding-top: 89px;
