--- a/assets/style/scss/pages/home/sections/_features.scss
+++ b/assets/style/scss/pages/home/sections/_features.scss
@@ -36,12 +36,14 @@
       margin: 32px 0;
       &__count {
         font-size: 72px;
+        margin-right: 20px;
         color: #391400;
         font-weight: 800;
       }
       &__desc {
         font-weight: 700;
         color: #391400;
+        line-height: 30px;
         font-size: 24px;
       }
     }
