--- a/assets/style/scss/pages/home/sections/_hero.scss
+++ b/assets/style/scss/pages/home/sections/_hero.scss
@@ -23,6 +23,7 @@
         font-size: 16px;
         line-height: 32px;
         color: rgba(255, 255, 255, 0.64);
+        margin-bottom: 20px;
       }
     }
     &__buttons {
