--- a/views/home.html
+++ b/views/home.html
@@ -74,7 +74,7 @@
       <section class="app__main__hero">
         <div class="container">
           <div class="row">
-            <div class="col-6">
+            <div class="col-6 col-md-12">
               <div class="app__main__hero__content">
                 <div class="app__main__hero__content__subtitle">
                   <h4 class="app__main__hero__content__subtitle__item">
@@ -129,7 +129,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-6">
+            <div class="col-6 col-md-12">
               <img style="width: 100%" src="../assets/images/pic.png" alt="" />
             </div>
           </div>
@@ -188,7 +188,7 @@
       <section class="app__main__features">
         <div class="container">
           <div class="row">
-            <div class="col-6" style="padding: 40px">
+            <div class="col-6 col-md-12" style="padding: 40px">
               <div class="app__main__features__subtitle">
                 <div class="app__main__features__subtitle__item">
                   How We Work
@@ -211,7 +211,7 @@
                 </button>
               </div>
             </div>
-            <div class="col-6">
+            <div class="col-6 col-md-12">
               <div class="app__main__features__items">
                 <div class="app__main__features__items__item">
                   <div class="app__main__features__items__item__count">
