--- a/assets/style/scss/pages/home/sections/_experience-design-agency.scss
+++ b/assets/style/scss/pages/home/sections/_experience-design-agency.scss
@@ -19,12 +19,14 @@
     padding: 5rem 0;
     .upper {
       display: flex;
+      flex-wrap: wrap;
       margin-bottom: 130px;
-
-      img {
-        width: 550px;
-      }
+      
+        img {
+          width: 50%;
+        }
       .text {
+        width: 50%;
         padding-left: 7rem;
         padding-top: 4rem;
         span {
@@ -77,9 +79,6 @@
           color: $text-dark;
         }
       }
-    //   .box:last-of-type{
-    //     border-radius: 6px 0px 0px 6px;
-    //   }
     }
     .col-4:first-child .box{
         border-radius: 6px 0px 0px 6px;
