--- a/assets/style/scss/pages/home/_index.scss
+++ b/assets/style/scss/pages/home/_index.scss
@@ -1,2 +1,3 @@
 @import './sections/hero', './sections/experience-design-agency';
 @import './sections/features';
+@import './sections/give-new-look'
