--- a/views/home.html
+++ b/views/home.html
@@ -133,7 +133,7 @@
           <hr />
           <div id="about">
             <div class="upper">
-              <img src="../assets/media/experience-design-agency.png" alt="" />
+                <img src="../assets/media/experience-design-agency.png" alt="" />
               <div class="text">
                 <span>About</span>
                 <h2>An Experience Design Agency</h2>
@@ -234,6 +234,31 @@
             <hr class="hr" />
           </div>
         </div>
+      </section>
+      <section id="give-new-look">
+        <div class="container">
+          <div class="row">
+            <div class="col-6">
+                <div class="text">
+                  <span>Features</span>
+                  <h2>Give Your Site A New Look</h2>
+                  <p>
+                    Service range including technical skills, design, business understanding.
+                  </p>
+                  <ul>
+                    <li><i class="fa-solid fa-check icon--primary"></i> Range including technical skills</li>
+                    <li><i class="fa-solid fa-check icon--primary"></i> Range including technical skills</li>
+                    <li><i class="fa-solid fa-check icon--primary"></i> Range including technical skills</li>
+                  </ul>
+                </div>
+            </div>
+            <div class="col-6">
+              <img src="../assets/media/newLook.png" alt="">
+            </div>
+          </div>
+
+        </div>
+
       </section>
     </main>
     <footer class="footer">
